
public class Main {
    public static void main(String[] args) {

        for (int i = 0; i < 10; i++) {
            ThreadLavoratore thread = new ThreadLavoratore(i);
            thread.start();
        }

    }
}