@startuml
package torreHanoi{

    abstract class Pila{
    -Arraylist<> pila : T
    +{abstract}push(T elemento) : void
    +{abstract}pop() : T
    +top() : T
    +isEmpty() : boolean
    +size() : int
    }

    class Colonna{
    -nomeColonna: String
    -dimensione: int
    -inizializzaDischi() : void
    +push(T elemento)) : void

    }
    class Disco{
    -dimensione : int
    }

    Exception WrongDimensionException {

    }
    Class Exception{
    }
}

package Main{
class main{
}
}

WrongDimensionException --> Exception
Colonna --> main : Istanzia
Colonna -- WrongDimensionException
Pila <-- Colonna : <extends>
Disco ..o Colonna
@enduml